# mpl-uncertainties

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: API.rst  Contributing.rst  conf.py  index.rst
examples/: README.rst  confidence_band.py  errorbar.py  example.py  fill_between.py  fit.py  linear_data_plotting.py  odr_linear_regression.py  plot.py
mpl_uncertainties/: __init__.py  _version.py  example.py  helper_functions.py  plots.py
mpl_uncertainties/tests/: test_all_plots.py  test_confidence_band.py  test_errorbar.py  test_example.py  test_fill_between.py  test_fit.py  test_plot.py
